2015-07-07 Martin Grønholdt

* rest/net-passwd.c (rest_net_passwd_destroy): Resets the esp8266 when called.


2015-07-05 Martin Grønholdt

* fs/connect/js/atmic.min.js: Changes content type to JSON.
* Makefile: Fixed file system scanning.


2015-07-04 Martin Grønholdt

* response_handlers.h: Added password handler.
* rest/rest.h: Added WIFI password routines.
* rest/net-passwd.c: Added file to handle setting WIFI password.
* 				    (rest_net_passwd_put_handler): Send header end.
* rest/network.c (rest_network_put_handler): Send header end.


2015-07-03 Martin Grønholdt

* Makefile: Added JSON lib.
* response_handlers.h: Added rest_network_put_handler.
* slighttp/http-response.c: Added http_status_line_204.
*						   (http_send_status_line): Added 204.
* slighttp/http-response.h: Added HTTP_STATUS_204.
* rest/network.c: Added rest_network_put_handler.
* rest/rest.h: Added rest_network_put_handler.
* slighttp/http-commen.*: Added get_header_value.
* slighttp/http-tcp.c (tcp_reconnect_cb): Don't disconnect, everything chrashes.
* slighttp/http-request.c (http_parse_headers): Get message if any.


2015-07-02 Martin Grønholdt

* slighttp/http-response.c (http_process_response): Handle specific method handler missing.


2015-07-01 Martin Grønholdt

* fs/connect/index.html: Status message, and better REST call timer.


2015-06-30 Martin Grønholdt

* debug.c (db_dealloc): Added check for empty entry in the alloc list.
* slighttp/http.h: Upped version.
* response_handlers.h: Added rest_network_head_handler.
* response_handlers.h: Added rest_net_names handlers.
* rest/network.c: Added rest_net_names_head_handler.
*				: Added create_response.
*				 (rest_network): Renamed rest_network_get_handler.
* rest/net-names.c: Added rest_network_head_handler.
*				  : Added create_response.
*				   (rest_net_names): Renamed rest_net_names_get_handler.
* rest/network.h: Added rest_network_head_handler.
* net/tcp (tcp_sent_cb): Check if connection is NULL.


2015-06-29 Martin Grønholdt